# writer

./: .gitignore  LICENSE  README.md  monitor.py  pyproject.toml  report.md
src/pitch/: api.py  crew.py  main.py  status_manager.py
src/pitch/config/: agents.yaml  tasks.yaml
src/pitch/static/: index.html  script.js  styles.css
src/pitch/tools/: custom_tool.py  document_tools.py  github_tool.py  serper_tool.py
