[project]
name = "content-generator"
version = "0.1.0"
description = "AI-powered content generator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.9",
    "python-pptx>=0.6.22",
    "pypdf>=4.0.0",
    "websockets>=12.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "aiofiles>=23.2.1",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.20"
]

[project.scripts]
content-generator = "pitch.main:run"
serve = "pitch.main:serve"
train = "pitch.main:train"
replay = "pitch.main:replay"
test = "pitch.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pitch"]

[tool.hatch.build]
only-packages = true

[tool.crewai]
type = "crew"
